<resources>
    <string name="app_name">ParkingFree</string>
    <string name="documento">Documento</string>
    <string name="clave">Clave</string>
    <string name="buttonAcceder">Acceder</string>
    <string name="sinCuenta">¿Aún no tienes cuenta?</string>
    <string name="buttonRegistrar">Registrar</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="labelcuenta">Mi Cuenta</string>
    <string name="labelReservas">Mis Reservas</string>
    <string name="labelComprasRealizadas">Mis Compras</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="claveActual">Clave actual</string>
    <string name="claveNueva">Clave nueva</string>
    <string name="repitaClave">Repita clave</string>
    <string name="buttonModificar">Modificar</string>
    <string name="nombreParqueadero">Nombre Negocio</string>
    <string name="direccion">Direccion</string>
    <string name="horarioAtencion">Horario Atención</string>
    <string name="puestosDisponibles">Puestos Disponibles</string>
    <string name="buttonEditar">Editar</string>
    <string name="horaIngreso">Hora Ingreso</string>
</resources>
